--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="question">
       <h2>🎉 You have been provisionally nominated!</h2>
       <p>Click below to access your special offer instantly</p>
-      <div class="answer" id="final">Start earning now 💰</div>
+      <div class="answer" id="final">Register your phone number so we can contact you. 💰</div>
     </div>
 
   </div>
