--- a/index.html
+++ b/index.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>You are nominated to win</title>
+  <title>Online Opportunity</title>
 
-  <!-- SEO / Preview -->
-  <meta content="https://modo3.com/thumbs/fit630x300/81043/1481118831/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D9%84.jpg" property="og:image">
+  <!-- Preview -->
+  <meta property="og:title" content="Explore a New Online Opportunity">
+  <meta property="og:description" content="Learn more about an available opportunity. No commitment required.">
+  <meta property="og:image" content="https://modo3.com/thumbs/fit630x300/81043/1481118831/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D9%84.jpg">
+
   <link rel="icon" href="https://modo3.com/thumbs/fit630x300/81043/1481118831/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D9%84.jpg">
-
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Cairo', sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     body {
-      background: url('https://i.imgur.com/gDeHz6O.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      direction: rtl;
+      background: #f5f6fa;
+      color: #333;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
     }
 
-    #wrapper {
+    .container {
       width: 100%;
       max-width: 600px;
-      padding: 15px;
-    }
-
-    #box {
-      background: rgba(0,0,0,0.7);
-      border-radius: 15px;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
       padding: 20px;
       text-align: center;
     }
@@ -47,143 +42,74 @@
     img {
       max-width: 100%;
       border-radius: 10px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
 
-    h2 {
-      font-size: 20px;
-      margin-bottom: 15px;
-    }
-
-    .answer {
-      background: #28a745;
-      margin: 10px auto;
-      padding: 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: 0.3s;
-      width: 90%;
-      max-width: 400px;
-      font-weight: 600;
-      color: #fff;
-      font-size: 16px;
-    }
-
-    .answer:hover {
-      background: #218838;
-      transform: scale(1.05);
-    }
-
-    .question {
-      display: none;
-    }
-
-    .question.active {
-      display: block;
-    }
-
-    #progress {
-      height: 6px;
-      background: #28a745;
-      width: 0%;
-      margin-bottom: 15px;
-      border-radius: 10px;
-      transition: 0.3s;
-    }
-
-    #timer {
-      background: #ffc107;
-      padding: 8px;
-      border-radius: 8px;
+    h1 {
+      font-size: 22px;
       margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 15px;
+      line-height: 1.6;
+      margin-bottom: 20px;
+      color: #555;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #1877f2;
+      color: #fff;
+      padding: 14px 30px;
+      border-radius: 8px;
+      text-decoration: none;
       font-weight: bold;
-      color: #000;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #145dbf;
+      transform: scale(1.03);
+    }
+
+    .footer {
+      margin-top: 25px;
+      font-size: 12px;
+      color: #888;
+    }
+
+    .footer a {
+      color: #888;
+      text-decoration: none;
+      margin: 0 5px;
     }
   </style>
 </head>
 
 <body>
 
-<div id="wrapper">
-  <div id="box">
+  <div class="container">
+    <img src="https://modo3.com/thumbs/fit630x300/81043/1481118831/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D9%84.jpg" alt="Opportunity">
 
-    <div id="progress"></div>
+    <h1>Explore a New Online Opportunity</h1>
 
-    <img src="https://modo3.com/thumbs/fit630x300/81043/1481118831/%D8%A3%D9%87%D9%85%D9%8A%D8%A9_%D8%A7%D9%84%D9%85%D8%A7%D9%84.jpg" alt="Earn Money">
+    <p>
+      We are sharing information about an available online opportunity.
+      Participation is optional and subject to individual eligibility.
+      No guarantees or commitments are required.
+    </p>
 
-    <div id="timer">⏳ The offer is available for a period of: <span id="time">60</span> second</div>
+    <a class="btn" href="PUT_YOUR_CPA_LINK_HERE">
+      Learn More
+    </a>
 
-    <!-- Q1 -->
-    <div class="question active">
-      <h2>Are you interested in making a profit?</h2>
-      <div class="answer" data-next="1">Yes</div>
+    <div class="footer">
+      <a href="#">Privacy Policy</a> |
+      <a href="#">Terms</a> |
+      <a href="#">Contact</a>
     </div>
-
-    <!-- Q2 -->
-    <div class="question">
-      <h2>Are you over 18 years old?</h2>
-      <div class="answer" data-next="2">Yes</div>
-      <div class="answer" data-next="2">No</div>
-    </div>
-
-    <!-- Q3 -->
-    <div class="question">
-      <h2>Do you like your current job?</h2>
-      <div class="answer" data-next="3">Yes</div>
-      <div class="answer" data-next="3">No</div>
-    </div>
-
-    <!-- Q4 -->
-    <div class="question">
-      <h2>How much time can you dedicate each day?</h2>
-      <div class="answer" data-next="4">1-2 Hours</div>
-      <div class="answer" data-next="4">3-5 Hours</div>
-      <div class="answer" data-next="4">More than 5 hours</div>
-    </div>
-
-    <!-- Final -->
-    <div class="question">
-      <h2>🎉 You have been provisionally nominated!</h2>
-      <p>Click below to access your special offer instantly</p>
-      <div class="answer" id="final">Register your phone number so we can contact you. 💰</div>
-    </div>
-
   </div>
-</div>
-
-<script>
-  const questions = document.querySelectorAll('.question');
-  const answers = document.querySelectorAll('.answer');
-  const progress = document.getElementById('progress');
-  let step = 0;
-
-  answers.forEach(btn => {
-    btn.onclick = () => {
-      if (btn.id === 'final') {
-        // ضع هنا رابط CPA الخاص بك
-        window.location.href = "https://get.newgoua.xyz/?utm_medium=9efd424b20637a7ade55e9dc5a26f90b62437890&utm_campaign=vmoina";
-        return;
-      }
-      questions[step].classList.remove('active');
-      step++;
-      questions[step].classList.add('active');
-      progress.style.width = ((step) / (questions.length - 1)) * 100 + "%";
-    };
-  });
-
-  // Fake timer
-  let time = 60;
-  setInterval(() => {
-    if (time > 0) {
-      time--;
-      document.getElementById('time').innerText = time;
-    }
-  }, 1000);
-
-  // Disable back
-  history.pushState(null, null, location.href);
-  window.onpopstate = () => history.go(1);
-</script>
 
 </body>
 </html>
