--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       No guarantees or commitments are required.
     </p>
 
-    <a class="btn" href="PUT_YOUR_CPA_LINK_HERE">
+    <a class="btn" href="https://get.newgoua.xyz/?utm_medium=9efd424b20637a7ade55e9dc5a26f90b62437890&utm_campaign=vmoina">
       Learn More
     </a>
 
